--- a/fast_project/templates/add_student.html
+++ b/fast_project/templates/add_student.html
@@ -21,7 +21,7 @@
                 <label for="email" class="form-label">Email</label>
                 <input type="email" class="form-control bg-dark text-white" id="email" name="email" required>
             </div>
-            <button type="submit" class="btn btn-primary w-100">Submit</button>
+            <button type="submit" class="btn btn-success w-100">Submit</button>
         </form>
     </div>
 </div>
