--- a/fast_project/templates/base.html
+++ b/fast_project/templates/base.html
@@ -4,12 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FASTORM</title>
-    <link rel="stylesheet" href="static/css/base.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
-  <body>
+  <body class="bg-dark text-light"> 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" style="font-weight: bold;" href="/">FASTORM</a>
@@ -22,7 +21,7 @@
                 <a class="nav-link" style="color: #e3e3e3; font-weight: bold;" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" style="color: #e3e3e3; font-weight: bold;" href="/crm">CRM</a>
+                <a class="nav-link" style="color: #e3e3e3; font-weight: bold;" href="/crm">Project</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" style="color: #e3e3e3; font-weight: bold;" href="#">Pricing</a>
