--- a/fast_project/templates/project.html
+++ b/fast_project/templates/project.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<link rel="stylesheet" href="/static/css/project.css">
 <section class="hero bg-dark text-light text-center py-5">
     <div class="container py-5">
         <h3 class="display-6" style="font-weight: bold;">
@@ -29,7 +29,7 @@
                     </div><div class="row">
                 {% endif %}
                 <div class="col-md-4 mb-3">
-                    <a href="/product/{{ product.id }}" class="text-decoration-none">
+                    <a href="/crm/{{ product.id }}" class="text-decoration-none">
                         <div class="list-group">
                             <div class="list-group-item mb-2" style="background-color: #e9ecef; color: #000; border: none; border-radius: 0;">
                                 <h5 class="mb-1" style="font-size: 18px;">{{ product.title }}</h5>
