--- a/fast_project/templates/base.html
+++ b/fast_project/templates/base.html
@@ -24,7 +24,10 @@
                 <a class="nav-link" style="color: #e3e3e3; font-weight: bold;" href="/crm">Project</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" style="color: #e3e3e3; font-weight: bold;" href="#">Pricing</a>
+                <a class="nav-link" style="color: #e3e3e3; font-weight: bold;" href="/register-form">Register</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: #e3e3e3; font-weight: bold;" href="/profile">Profile</a>
               </li>
             </ul>
           </div>
