--- a/fast_project/templates/project.html
+++ b/fast_project/templates/project.html
@@ -11,7 +11,7 @@
             Your opinion matters! We are committed to improving our services 
             and your feedback helps us achieve that.
         </p>
-        <form action="#" method="GET" class="d-flex justify-content-center">
+        <form action="/search/" method="GET" class="d-flex justify-content-center">
             <input type="text" name="query" class="form-control me-2" placeholder="Search for products..." aria-label="Search" style="max-width: 500px; width: 100%;">
             <button type="submit" class="btn btn-success">Search</button>
         </form>
