--- a/fast_project/templates/login.html
+++ b/fast_project/templates/login.html
@@ -5,7 +5,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <h2 class="text-center mb-4">Login</h2>
-            <form method="POST" action="#">
+            <form method="POST" action="/login">
                 <div class="mb-3">
                     <label for="email" class="form-label">Email address</label>
                     <input type="email" class="form-control" id="email" name="email" required>
