--- a/fast_project/templates/profile.html
+++ b/fast_project/templates/profile.html
@@ -6,7 +6,8 @@
         <div class="col-md-6">
             <div class="card bg-dark text-light" style="border: none;">
                 <div class="text-center mb-3">
-                    <h4>User Profile</h4>
+                    <h4>Welcome {{ full_name }}</h4>
+                    <a href="/logout" class="btn btn-danger">Logout</a>
                 </div>
                 <div class="card-body">
                     <div class="row mb-3 align-items-center">
@@ -14,7 +15,7 @@
                             <label class="form-label mb-0">First Name:</label>
                         </div>
                         <div class="col-md-8">
-                            <p class="text-light bg-dark" style="border: 1px solid #6c757d; background: transparent; padding: 0.5rem; margin-bottom: 0;">John</p>
+                            <p class="text-light bg-dark" style="border: 1px solid #6c757d; background: transparent; padding: 0.5rem; margin-bottom: 0;">{{ first_name }}</p>
                         </div>
                     </div>
                     <div class="row mb-3 align-items-center">
@@ -22,7 +23,7 @@
                             <label class="form-label mb-0">Last Name:</label>
                         </div>
                         <div class="col-md-8">
-                            <p class="text-light bg-dark" style="border: 1px solid #6c757d; background: transparent; padding: 0.5rem; margin-bottom: 0;">Doe</p>
+                            <p class="text-light bg-dark" style="border: 1px solid #6c757d; background: transparent; padding: 0.5rem; margin-bottom: 0;">{{ last_name }}</p>
                         </div>
                     </div>
                     <div class="row mb-3 align-items-center">
@@ -30,7 +31,7 @@
                             <label class="form-label mb-0">Email:</label>
                         </div>
                         <div class="col-md-8">
-                            <p class="text-light bg-dark" style="border: 1px solid #6c757d; background: transparent; padding: 0.5rem; margin-bottom: 0;">john.doe@example.com</p>
+                            <p class="text-light bg-dark" style="border: 1px solid #6c757d; background: transparent; padding: 0.5rem; margin-bottom: 0;">{{ email }}</p>
                         </div>
                     </div>
                 </div>
@@ -38,4 +39,5 @@
         </div>
     </div>
 </div>
+
 {% endblock %}
