--- a/fast_project/templates/register.html
+++ b/fast_project/templates/register.html
@@ -5,7 +5,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <h2 class="text-center mb-4">Register</h2>
-            <form method="POST" action="#">
+            <form method="POST" action="/register">
                 <div class="mb-3">
                     <label for="first_name" class="form-label">First Name</label>
                     <input type="text" class="form-control" id="first_name" name="first_name" required>
