--- a/fast_project/templates/project.html
+++ b/fast_project/templates/project.html
@@ -3,11 +3,11 @@
 {% block content %}
 <link rel="stylesheet" href="/static/css/project.css">
 <section class="hero bg-dark text-light text-center py-5">
-    <div class="container py-5">
-        <h3 class="display-6" style="font-weight: bold;">
+    <div class="container">
+        <h3 class="display-7" style="font-weight: bold;">
             Customer Feedback System
         </h3>
-        <p class="mx-auto text-left" style="max-width: 800px; font-size: 18px; color: #dee2e6;">
+        <p class="mx-auto text-left" style="max-width: 800px; font-size: 16px; color: #dee2e6;">
             Your opinion matters! We are committed to improving our services 
             and your feedback helps us achieve that.
         </p>
