--- a/fast_project/templates/register.html
+++ b/fast_project/templates/register.html
@@ -4,28 +4,50 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <h2 class="text-center mb-4">Register</h2>
-            <form method="POST" action="/register">
-                <div class="mb-3">
-                    <label for="first_name" class="form-label">First Name</label>
-                    <input type="text" class="form-control" id="first_name" name="first_name" required>
-                </div>
-                <div class="mb-3">
-                    <label for="last_name" class="form-label">Last Name</label>
-                    <input type="text" class="form-control" id="last_name" name="last_name" required>
-                </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="email" name="email" required>
-                </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" name="password" required>
-                </div>
-                <p>Already have a account? <a href="/login-form">Login</a></p> 
+            <div class="card p-3" style="background-color: #343a40;">
+                <h3 class="text-center mb-3" style="color: #d3d3d3;">Register</h3> 
+                <form method="POST" action="/register">
+                    <div class="row">
+                        <div class="col-md-6 mb-2">
+                            <label for="first_name" class="form-label" style="font-size: 0.85rem; color: #d3d3d3;">First Name</label>
+                            <input type="text" class="form-control" id="first_name" name="first_name" required>
+                        </div>
+                        <div class="col-md-6 mb-2">
+                            <label for="last_name" class="form-label" style="font-size: 0.85rem; color: #d3d3d3;">Last Name</label>
+                            <input type="text" class="form-control" id="last_name" name="last_name" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 mb-2">
+                            <label for="email" class="form-label" style="font-size: 0.85rem; color: #d3d3d3;">Email address</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
+                        </div>
+                        <div class="col-md-6 mb-2">
+                            <label for="password" class="form-label" style="font-size: 0.85rem; color: #d3d3d3;">Password</label>
+                            <input type="password" class="form-control" id="password" name="password" required>
+                        </div>
+                    </div>
 
-                <button type="submit" class="btn btn-success w-100">Register</button>
-            </form>
+                    <hr class="my-3" style="border-color: #d3d3d3;"> 
+
+                    <div class="row">
+                        <div class="col-md-6 mb-2">
+                            <a href="#" class="btn btn-danger w-100" style="font-size: 0.85rem;">
+                                <i class="fab fa-google me-2"></i> Google
+                            </a>
+                        </div>
+                        <div class="col-md-6 mb-2">
+                            <a href="#" class="btn btn-dark w-100" style="font-size: 0.85rem;">
+                                <i class="fab fa-github me-2"></i> GitHub
+                            </a>
+                        </div>
+                    </div>
+
+                    <button type="submit" class="btn btn-success w-100 mt-2" style="font-size: 0.85rem;">Register</button>
+                </form>
+
+                <p class="text-center mt-2" style="font-size: 0.90rem; color: #d3d3d3;">Already have an account? <a href="/login-form" style="color: #d3d3d3;">Login</a></p>
+            </div>
         </div>
     </div>
 </div>
