--- a/fast_project/templates/search_result.html
+++ b/fast_project/templates/search_result.html
@@ -20,7 +20,7 @@
             {% endfor %}
         </div>
         {% else %}
-        <p class="text-center">Sorry, no results found. Please go back.</p>
+        <p class="text-center">Sorry, no results found.</p>
         {% endif %}
     </div>
 </section>
