--- a/fast_project/templates/project.html
+++ b/fast_project/templates/project.html
@@ -20,7 +20,7 @@
 
 <section class="products py-3 bg-dark text-light">
     <div class="container">
-        <h2 class="text-center mb-4">View By Products</h2>
+        <h2 class="text-center mb-4">PRODUCTS</h2>
         <a href="add-product-form" class="btn btn-success mb-2">Add Product</a>
         <div class="row">
             {% set counter = 0 %}
