--- a/fast_project/templates/product_detail.html
+++ b/fast_project/templates/product_detail.html
@@ -22,8 +22,8 @@
                             Sort by
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="sortDropdown">
-                            <li><a class="dropdown-item" href="?sort=newest">Newest</a></li>
-                            <li><a class="dropdown-item" href="?sort=oldest">Oldest</a></li>
+                            <a href="/sorted?sort=newest" class="dropdown-item">Newest</a>
+                            <a href="/sorted?sort=newest" class="dropdown-item">Oldest</a>
                         </ul>
                     </div>
                 </div>
